Version 0.8.9:
 * new translations:
   * bulgarian
   * latin
 * updated most translations
 * new or updated portraits:
   * Konrad, Delfador, Li'sar and Kalenz (Heir to the Throne)
   * Gweddry and Dacyn (Eastern Invasion)
 * added missing animations for:
   * Mermaid Initiate, Mermaid Enchantress and Mermaid Siren
   * Ancient Wose
   * Goblin Direwolf Rider and Goblin Knight
   * Gryphon
   * Skeleton Archer, Revenant and Death Knight
   * Troll Warrior, Troll Hero and Great Troll, Young Ogre
   * Grand Knight, Lord and Master Bowman
   * Cuttlefish
 * new or overhauled Graphics for:
   * Footpad, Outlaw, Thief and Rogue
   * Orcish Shamans, Elvish Lord and Elvish High Lord
   * Ghost, Nightgaunt, Shadow, Spectre and Wraith
 * new female units for:
   * Footpad, Thief, Rogue and Assassin
 * added new tiles:
   * Desert, desert hills, desert mountain, desert villages (adobe and tent),
     desert road, desert oasis, savanna, tropical forest,
     tropical forest village
 * added icon for petrified units
 * fixed missing diagonal projectiles on many units
 * removed old unused images:
   * time-of-day
 * downloaded campaigns no longer require a restart to be able to play them
 * new units:
   * Javelineer
 * unit balancing:
   * Naga fighter: increased hitpoints from 27 to 30
   * Merman Hoplite: increased resistances and damage
   * Mermaid Initiate/Enchantress/Siren: reduced number of attacks,
     increased damage, removed special resistances
   * Mermaid Initiate: increased experience needed to level, other minor tweaks
   * Swordsman: increase resistance to blade and impact
   * Royal guard: increase resistance to blade and impact
   * Pikeman: increase resistance to pierce, change attacks number and damage
   * Halberdier: increase resistance to pierce, increase blade damage, decrease
     pierce damage
   * Saurian Tribalist, Saurian Icecaster, Saurian Soothsayer: remove 'skirmish'
   * Saurian Skirmisher: Increase cost to 14 gold