@@ -1,3 +1,6 @@
+CVS
+ * fixed editor to work with zipios support enabled
+
 Version 0.8.9:
  * new translations:
    * bulgarian
